--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,12 +57,12 @@
         <activity android:name=".activities.UsersActivity" android:screenOrientation="portrait"/>
         <activity android:name=".activities.UpdateTaskActivity" android:screenOrientation="portrait"/>
         <activity android:name=".activities.RequestDoingActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activities.TaskActivity"
+        <activity android:name=".taskactivity.TaskActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden">
 
         </activity>
-        <activity android:name=".login.view.LoginActivity">
+        <activity android:name=".login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
