--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,20 +52,17 @@
             android:screenOrientation="portrait" />
         <activity android:name=".activities.UserActivity" />
         <activity
-            android:name=".activities.CreateUserActivity"
-            android:screenOrientation="portrait" />
+            android:name=".activities.CreateUserActivity" />
         <activity
             android:name=".activities.UsersActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activities.UpdateTaskActivity"
-            android:screenOrientation="portrait" />
+            android:name=".activities.UpdateTaskActivity" />
         <activity
             android:name=".activities.RequestDoingActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".taskactivity.TaskActivity"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity android:name=".login.LoginActivity">
             <intent-filter>
