--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,18 +44,17 @@
             android:name=".activities.MapActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".activities.UserRoleActivity" />
+        <!--<activity-->
+            <!--android:name=".activities.AccountActivity"-->
+            <!--android:screenOrientation="portrait" />-->
         <activity
-            android:name=".activities.AccountActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".createTask.CreateTaskActivity"
-            android:screenOrientation="portrait" />
+            android:name=".createTask.CreateTaskActivity" />
         <activity android:name=".activities.UserActivity" />
         <activity
             android:name=".activities.CreateUserActivity" />
-        <activity
-            android:name=".activities.UsersActivity"
-            android:screenOrientation="portrait" />
+        <!--<activity-->
+            <!--android:name=".activities.UsersActivity"-->
+            <!--android:screenOrientation="portrait" />-->
         <activity
             android:name=".activities.UpdateTaskActivity" />
         <activity
@@ -64,7 +63,7 @@
         <activity
             android:name=".taskactivity.TaskActivity"
             android:windowSoftInputMode="adjustResize|stateHidden" />
-        <activity android:name=".login.LoginActivity">
+        <activity android:name=".activities.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
