--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             <!--android:name=".activities.AccountActivity"-->
             <!--android:screenOrientation="portrait" />-->
         <activity
-            android:name=".createTask.CreateTaskActivity" />
+            android:name=".activities.createTask.CreateTaskActivity" />
         <activity android:name=".activities.UserActivity" />
         <activity
             android:name=".activities.CreateUserActivity" />
