--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     compile 'com.google.dagger:dagger:2.9'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
     provided 'org.glassfish:javax.annotation:10.0-b28'
+
+    //rxbinding
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
 }
 
 //firebase
