--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'jacoco-android'
 apply plugin: 'realm-android'
+apply plugin: 'io.fabric'
+
 
 android {
     compileSdkVersion 26
@@ -9,8 +11,8 @@ android {
         applicationId "com.example.andrey.newtmpclient"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 201
+        versionName "2.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -25,17 +27,17 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
-ext.supportVersion = '26.0.2'
+ext.mySupportVersion = '26.1.0'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "com.android.support:appcompat-v7:25.3.1"
+    compile "com.android.support:appcompat-v7:${mySupportVersion}"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
-    compile 'com.android.support:design:25.3.1'
+    compile "com.android.support:design:${mySupportVersion}"
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.google.android.gms:play-services-maps:10.2.6'
     compile 'com.google.firebase:firebase-core:10.2.6'
@@ -59,6 +61,9 @@ dependencies {
 
     //rxbinding
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
+        transitive = true;
+    }
 }
 
 //firebase
