--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
             android:value="AIzaSyCNOh1BQFheWMb_SZaUk3ptmteZfnNqCFw" />
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="e45fc1a9945b33b1966678b708582468b8c55a35"
-            />
+            android:value="e45fc1a9945b33b1966678b708582468b8c55a35" />
 
         <service android:name=".service.MyFirebaseMessagingService">
             <intent-filter>
@@ -48,19 +47,16 @@
             android:name=".activities.MapActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".activities.UserRoleActivity" />
-        <!--<activity-->
-            <!--android:name=".activities.AccountActivity"-->
-            <!--android:screenOrientation="portrait" />-->
-        <activity
-            android:name=".activities.createTask.CreateTaskActivity" />
+        <!-- <activity -->
+        <!-- android:name=".activities.AccountActivity" -->
+        <!-- android:screenOrientation="portrait" /> -->
+        <activity android:name=".activities.createTask.CreateTaskActivity" />
         <activity android:name=".activities.UserActivity" />
-        <activity
-            android:name=".activities.CreateUserActivity" />
-        <!--<activity-->
-            <!--android:name=".activities.UsersActivity"-->
-            <!--android:screenOrientation="portrait" />-->
-        <activity
-            android:name=".activities.UpdateTaskActivity" />
+        <activity android:name=".activities.CreateUserActivity" />
+        <!-- <activity -->
+        <!-- android:name=".activities.UsersActivity" -->
+        <!-- android:screenOrientation="portrait" /> -->
+        <activity android:name=".activities.UpdateTaskActivity" />
         <activity
             android:name=".activities.RequestDoingActivity"
             android:screenOrientation="portrait" />
@@ -79,6 +75,7 @@
             android:label="@string/title_activity_main_drawer"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.createuser.CreateNewUserActivity" />
+        <activity android:name=".activities.oneuser.OneUserActivity" />
     </application>
 
 </manifest>
