--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,11 +51,9 @@
         <!-- android:name=".activities.AccountActivity" -->
         <!-- android:screenOrientation="portrait" /> -->
         <activity android:name=".activities.createTask.CreateTaskActivity" />
-        <activity android:name=".activities.UserActivity" />
         <!-- <activity -->
         <!-- android:name=".activities.UsersActivity" -->
         <!-- android:screenOrientation="portrait" /> -->
-        <activity android:name=".activities.UpdateTaskActivity" />
         <activity
             android:name=".activities.RequestDoingActivity"
             android:screenOrientation="portrait" />
@@ -75,6 +73,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.createuser.CreateNewUserActivity" />
         <activity android:name=".activities.oneuser.OneUserActivity" />
+        <activity android:name=".activities.updatenewtask.UpdateNewTaskActivity" />
     </application>
 
 </manifest>
