--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.andrey.newtmpclient"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 201
         versionName "2.1"
@@ -58,6 +58,9 @@ dependencies {
     compile 'com.google.dagger:dagger:2.9'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
     provided 'org.glassfish:javax.annotation:10.0-b28'
+
+    //permissions
+    compile 'com.github.VictorAlbertos.RxPermissionsResult:rx2:0.0.4'
 
     //rxbinding
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
