--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ allprojects {
         jcenter()
         google()
         maven { url 'https://maven.fabric.io/public' }
+        maven { url "https://jitpack.io" }
     }
 }
 
