изменил либу пермишнов, исправил баг с получением координат в сервисе. Переделал пару запросов для получения заданий

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
-    //permissions
-    compile 'com.github.VictorAlbertos.RxPermissionsResult:rx2:0.0.4'
+    //another perm
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     //map
     compile 'com.google.maps.android:android-maps-utils:0.4+'
 
