добавил пару запросов на добавление firebase и отправление координат

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
                 <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
-        <service android:name=".service.GpsService" />
+        <service android:name=".service.gps.GpsService" />
 
         <!-- <activity -->
         <!-- android:name=".activities.AccountActivity" -->
