--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true;
     }
+    //radiobutton
+    compile 'com.github.ceryle:RadioRealButton:v2.1.1'
 }
 
 //firebase
